--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "dayjs": "^1.7.7",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
