--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "start": "node ./src/server/app.js"
   },
   "dependencies": {
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1", 
     "axios": "^0.19.2",
+    "cluster": "^0.7.7",
     "dayjs": "^1.7.7",
+    "dns": "^0.2.2",
+    "express": "^4.17.1",
     "log4js": "^3.0.6",
     "mssql": "^6.2.1",
-    "express": "^4.17.1"
+    "repl": "^0.1.3",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
